[tool.poetry]
name = "machine-learning-book"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "machine_learning_book"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
