[tool.poetry]
name = "machine-learning-book"
version = "0.1.0"
description = ""
authors = ["Alexander Ou <alexou@gmail.com>"]
readme = "README.md"
packages = [{include = "machine_learning_book"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
numpy = "1.21.2"
scipy = "1.7.0"
scikit-learn = "1.0"
matplotlib = "3.4.3"
pandas = "1.3.2"
jupyterlab = "^4.0.5"


[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
